# vibe-sms

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  extract_z80  extract_z80.rs
.claude/agents/: audio-research.md  build-check.md  core-expert.md  input-research.md  mapper-research.md  rust-architecture.md  rust-patterns.md  rust-quality.md  sms-hardware.md  test-runner.md  vdp-research.md
.github/workflows/: build.yml  ci.yml
assets/: icon.icns
src/: bus.rs  core.rs  eeprom.rs  joypad.rs  main.rs  mmu.rs  platform.rs  savestate.rs  vdp.rs
src/audio/: fm.rs  mixer.rs  mod.rs  psg.rs  ym2413.rs
src/frontend/: app.rs  egui_ui.rs  input.rs  menu.rs  mod.rs  renderer.rs
