[package]
name = "vibe-sms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
z80 = "1.0.2"

# Audio
cpal = "0.15.3"

# Input
gilrs = "0.11.0"

# Frontend — cross-platform (Linux/Windows/macOS)
# minifb: software framebuffer window — no GPU driver requirements, zero runtime deps on Windows
minifb = "0.28"

# Native file dialogs (Open ROM)
# Linux: use GTK3 backend (avoids the xdg-portal/wayland-sys dependency chain)
# Windows/macOS: use default (native system dialogs, no extra deps)
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { version = "0.15" }

[build-dependencies]
cc = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
