[package]
name = "vibe-sms"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
z80 = { path = "vendor/z80" }

[dependencies]
# Core
z80 = "1.0.2"

# Audio
cpal = "0.15.3"

# Input
gilrs = "0.11.0"

# Frontend — cross-platform (Linux/Windows/macOS)
egui        = "0.33"
egui-winit  = "0.33"
egui_glow   = "0.33"
winit       = { version = "0.30.12", features = ["rwh_06", "x11", "wayland"] }
glutin      = "0.32.3"
glutin-winit = "0.5.0"
glow        = "0.16.0"
muda        = "0.17.1"
# Image decoding for window icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Native file dialogs (Open ROM)
# Linux: use GTK3 backend (avoids the xdg-portal/wayland-sys dependency chain)
# Windows/macOS: use default (native system dialogs, no extra deps)
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
gtk  = "0.18"
glib = "0.18"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd      = { version = "0.15" }
pollster = "0.3"

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
